# ProphetVST

./: LICENSE  README.md
Prophet6VST/: CMakeLists.txt  README.md  install.sh
Prophet6VST/src/: Main.cpp  MainComponent.h  Prophet6AudioProcessorEditor.cpp  Prophet6AudioProcessorEditor.h  Prophet6Controller.cpp  Prophet6Plugin.cpp  Prophet6Processor.cpp  Prophet6Processor.h  amplifier.cpp  amplifier.h  arpeggiator.cpp  arpeggiator.h  effects.cpp  effects.h  filter.cpp  filter.h  modulation.cpp  modulation.h  oscillator.cpp  oscillator.h  sequencer.cpp  sequencer.h
